[package]
name = "crypto_watcher"
version = "0.1.0"
authors = ["Gordan Zovko <gordan@zovko.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"